# Mon-premier-agent

./: .gitignore  README.md
mon_agent/: agent.py  main.py  prompts.py  tools.py
mon_serveur_mcp/: README.md  pyproject.toml  server.py  tools.py
